# stf2022stillwater

./: .gitignore  CMakeLists.txt  README.md  dump_shader.py
include/: boilerplate.hpp  buffer.hpp  pipeline.hpp  shader.hpp  shaderbytes.h  shaderbytes.hpp  vulkanstate.hpp  window.hpp
shaders/: shader.vert  vert.spv
src/: main.cpp  pipeline.cpp  shader.cpp  vulkanstate.cpp  window.cpp
